--- a/mainTest.html
+++ b/mainTest.html
@@ -40,7 +40,7 @@
 <p>My first paragraph.</p>
 
 </body>
-<iframe src="demo_iframe.htm" name="iframe_a" title="Iframe Example"></iframe>
+<iframe src="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" name="iframe_a" title="Iframe Example"></iframe>
 
-<p><a href="https://www.w3schools.com" target="iframe_a">W3Schools.com</a></p>
+<p><a href="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" target="iframe_a">W3Schools.com</a></p>
 </html>
