--- a/mainTest.html
+++ b/mainTest.html
@@ -42,5 +42,5 @@
 </body>
 <iframe src="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" name="iframe_a" title="Iframe Example"></iframe>
 
-<p><a href="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" target="iframe_a">W3Schools.com</a></p>
+<p><a href="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" target="iframe_a">https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest</a></p>
 </html>
