--- a/mainTest.html
+++ b/mainTest.html
@@ -32,7 +32,7 @@
 	  } else {
 	    parentUserName = prompt("Please enter your name:", "");
 	    if (parentUserName != "" && parentUserName != null) {
-	      setCookie("username", parentUserName, 365);
+	      setCookie("parentUserName", parentUserName, 365);
 	    }
 	  }
 	}</script>
