--- a/mainTest.html
+++ b/mainTest.html
@@ -41,7 +41,7 @@
 <p>My Parent Window text</p>
 
 </body>
-<iframe src="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" name="iframe_a" title="Iframe Example"></iframe>
+<iframe src="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest?launchFromParent=true" name="iframe_a" title="Iframe Example"></iframe>
 
-<p><a href="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" target="iframe_a">https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest</a></p>
+<p><a href="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest?launchFromParent=true" target="iframe_a">https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest?launchFromParent=true</a></p>
 </html>
