--- a/mainTest.html
+++ b/mainTest.html
@@ -40,6 +40,6 @@
 <p>My Parent Window text</p>
 
 </body>
-<iframe src="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest?launchFromParent=true" name="iframe_a" title="Iframe Example"></iframe>
+<iframe src="https://iframecrossdomaincookietest.pages.dev/iFrameCookieTest" name="iframe_a" title="Iframe Example"></iframe>
 
 </html>
