--- a/mainTest.html
+++ b/mainTest.html
@@ -40,6 +40,6 @@
 <p>My Parent Window text</p>
 
 </body>
-<iframe src="https://8080-cs-b3cbdfd0-6902-4007-8d3b-89f431dd45c6.cs-us-west1-ijlt.cloudshell.dev/read-spring-cookie?authuser=0&redirectedPreviously=true" name="iframe_a" title="Iframe Example"></iframe>
-
+<iframe src="demo_iframe.htm" name="iframe_a" title="Iframe Example"></iframe>
+<p><a href="https://8080-cs-b3cbdfd0-6902-4007-8d3b-89f431dd45c6.cs-us-west1-ijlt.cloudshell.dev/read-spring-cookie?authuser=0&redirectedPreviously=true" target="iframe_a">W3Schools.com</a></p>
 </html>
