--- a/mainTest.html
+++ b/mainTest.html
@@ -41,5 +41,5 @@
 
 </body>
 <iframe src="demo_iframe.htm" name="iframe_a" title="Iframe Example"></iframe>
-<p><a href="https://8080-cs-b3cbdfd0-6902-4007-8d3b-89f431dd45c6.cs-us-west1-ijlt.cloudshell.dev/read-spring-cookie?authuser=0&redirectedPreviously=true" target="iframe_a">W3Schools.com</a></p>
+<p><a href="https://port-8080-java-purple-wolf-ganeshmaliforamazon588725.preview.codeanywhere.com/read-spring-cookie?authuser=0&redirectedPreviously=true" target="iframe_a">W3Schools.com</a></p>
 </html>
